--- a/KPIAnalytics/Views/Farms/Index.cshtml
+++ b/KPIAnalytics/Views/Farms/Index.cshtml
@@ -10,7 +10,7 @@
 <div class="box box-warning">
     <div class="box-header">
         <h3 class="box-title">Index</h3>
-        <a href="@Url.Action("Create", "Farms" )" class="btn  btn-sm btn-primary pull-right"><i class="fa fa-plus-square"></i>&nbsp;&nbsp;Create Farms</a>
+        <a href="@Url.Action("Create", "Farms" )" class="btn  btn-sm btn-primary pull-right"><i class="fa fa-plus-square"></i>&nbsp;&nbsp;Enter Farm</a>
     </div>
     <!-- /.box-header -->
     <div class="box-body">
