--- a/KPIAnalytics/Views/KPIs/Index.cshtml
+++ b/KPIAnalytics/Views/KPIs/Index.cshtml
@@ -11,7 +11,7 @@
 <div class="box box-warning">
     <div class="box-header">
         <h3 class="box-title">Index</h3>
-        <a href="@Url.Action("Create", "KPIs" )" class="btn  btn-sm btn-primary pull-right"><i class="fa fa-plus-square"></i>&nbsp;&nbsp;Create Key Performace Indicators</a>
+        <a href="@Url.Action("Create", "KPIs" )" class="btn  btn-sm btn-primary pull-right"><i class="fa fa-plus-square"></i>&nbsp;&nbsp;Enter Accomplishments</a>
     </div>
     <!-- /.box-header -->
     <div class="box-body">
