--- a/KPIAnalytics/Views/Shared/_Layout.cshtml
+++ b/KPIAnalytics/Views/Shared/_Layout.cshtml
@@ -104,7 +104,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a href="@Url.Action("Index","KPIs")" class="LinkCustomNav">Admin<span class="sr-only">(current)</span></a></li>
+                            <li class="active"><a href="@Url.Action("Index","KPIs")" class="LinkCustomNav">KPI Data<span class="sr-only">(current)</span></a></li>
                             <li><a href="@Url.Action("Dashboard","Targets")" class="LinkCustomNav">Production Target</a></li>
                             <li><a href="@Url.Action("Dashboard","KPIs")" class="LinkCustomNav">Outcome</a></li>
                             <li><a href="@Url.Action("Location","Farms")" class="LinkCustomNav">Farms</a></li>
