--- a/KPIAnalytics/Views/Targets/Create.cshtml
+++ b/KPIAnalytics/Views/Targets/Create.cshtml
@@ -279,7 +279,9 @@
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
-            <button type="submit" id="KPIbutton" class="btn btn-primary"><i class="fa fa-send"></i>&nbsp;&nbsp;Submit</button>
+            <button type="button" id="KPIbutton" class="btn btn-primary"><i class="fa fa-send"></i>&nbsp;&nbsp;Submit</button>
+            <button type="submit" style="" id="btnSubmit"/>
+
             <a href="@Url.Action("Index", "Targets")" class="btn btn-warning"><i class="fa fa-list"></i>&nbsp;&nbsp;Back to List</a>
         </div>
     </div>
@@ -336,6 +338,10 @@
     $(function () {
         CKEDITOR.replace('Description')
         $("#Description").text('"sample text: this will be displayed on the dashboard GOAL panel"');
+    })
+
+    $("#btnSubmit").click(function () {
+        alert('awdawdawd');
     })
     $("#YearEnd").change(function () {
         var start = $("#YearStart").val();
